Fix Selenium tests with block-label inputs
Preliminary testing of the new inputs on Verify showed a bunch of test failures with messages like `Unable to find radio button`. Switching the off-screen hiding to use our standard `visually-hidden` code (slightly amended so we can use a mixing instead of extending the class) fixes this.

As unsetting this code would be a good deal more complex than unsetting a single `left` value, I’ve also altered the initial hiding to exclude IE8.

--- a/public/sass/elements/_helpers.scss
+++ b/public/sass/elements/_helpers.scss
@@ -22,8 +22,7 @@
 }
 
 // Hide, but not for screenreaders
-.visually-hidden,
-.visuallyhidden {
+@mixin visually-hidden {
   position: absolute;
   overflow: hidden;
   clip: rect(0 0 0 0);
@@ -32,4 +31,9 @@
   margin: -1px;
   padding: 0;
   border: 0;
+}
+
+.visually-hidden,
+.visuallyhidden {
+  @include visually-hidden;
 }
